--- a/chooseauni/package.json
+++ b/chooseauni/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "angular": "^1.6.6",
+    "angular-resource": "^1.6.6",
     "angular-table-resize": "^1.0.9",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
